button flicker fix

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -6,6 +6,7 @@
 	padding: 0;
 	border: 0;
 	color: white;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .button {
